fix font not showing

--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -1,18 +1,15 @@
 @font-face {
-    font-family: CircularStdBold;
-    src: url("../fonts/CircularStd-Bold.otf");
-}
-
-@font-face {
-    font-family: CircularStdMedium;
-    src: url("../fonts/CircularStd-Medium.ttf");
-}
+    font-family: 'CircularStd';
+    src: url("../fonts/circularstd-regular.eot"); /* IE9 Compat Modes */
+    src: url("../fonts/circularstd-regular.eot?#iefix") format('embedded-opentype'), /* IE6-IE8 */
+         url("../fonts/circularstd-regular.woff") format('woff'), /* Pretty Modern Browsers */
+         url("../fonts/circularstd-regular.ttf")  format('truetype'), /* Safari, Android, iOS */
+  }
 
 body {
     margin: 0;
     box-sizing: border-box;
-    font-family: CircularStdBold !important;
-    /* font-weight: 100 !important; */
+    font-family: 'CircularStd' !important;
 }
 
 /* Container */
